--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <h2>Curated Playlists</h2>
                 <div class="scroll">
                     <section>
-                        <img src="Boozy-brunch-cover.png" alt="Six people clinking glasses over a meal to celebrate"/>
+                        <img src="boozy-brunch-cover.png" alt="Six people clinking glasses over a meal to celebrate"/>
                         <h3>Boozey Brunch</h3>
                         <p>Light up the afternoon with these energetic hits.</p>
                     </section>
